Update to most recent grok library